--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ body{
   justify-content: space-around;
   align-items: center;
   width: 100%;
-  height: 162px;
+  height: 150px;
   font-family: var(--titleFont) ;
   background: var(--lightColor);
 }
@@ -41,7 +41,7 @@ body{
 }
 .gameMark{
   background: var(--highlightColor);
-  border-radius: 5px;
+  border-radius: calc(3px + 1vw);
   width: 20%;
   height: 60%;
   display: flex;
@@ -59,56 +59,88 @@ body{
   border: 1px solid white;
   margin-top: 15%;
 }
-img{
-  height: 100%;
-  width: 100%;
-}
 .cardsCont {
-  width: 90%;
-  height: 71%;
-  padding: 1rem;
   background: var(--lightColor);
-  margin-top: 1%;
-  justify-items: center;
-}
-.mainCard {
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  height: 76%;
+  width: 85%;
+  grid-template-columns: repeat(6, 12%);
+  grid-template-rows: repeat(2, 43%);
+  gap: 4%;
+  justify-content: center;
+  align-content: center;
+  justify-items: center;
+  align-items: center;
+  margin-top: 0.8%;
+}
+
+.card {
+  display: flex;
   width: 100%;
   height: 100%;
-
-}
-.card {
-  border: 1px solid black;
   text-align: center;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  width: 60%;
-  height: 63%;
-  border-radius: 5px;
+  transition: transform 0.8s;
+  margin: 5px;
+  top: 0;
+  cursor: pointer;
+  transform-style: preserve-3d;
+  border-radius: calc(2px + 1vw);
+  box-shadow:  5px 5px 10px #bebebe,
+             -5px -5px 10px #ffffff;
 }
-.front {
+
+.front, .back {
   background: var(--lightColor);
   color: var(--textColor);
-  font-size: calc(8px + 1vw);
-  position: relative;
-}
-.back {
-  width: 60%;
-  height: 63%;
-  border: 1px solid red;
-  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  border-radius: calc(2px + 1vw);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 
+  pointer-events: none;
+  object-fit: cover;
 }
-.front img{
+.card-.back {
+  transform: rotateY(180deg);
+}
+.flip {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  margin: 5px;
+  top: 0;
+  cursor: pointer;
+  transform-style: preserve-3d;
+  border-radius: 7px;
+  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+  border: 4px solid rgba(255, 180, 190, 0.6);
+}
+.front {
+  background-color: #EAFAFB;
+  transform-style: preserve-3d;
+  transform: rotateY(180deg);
+  backface-visibility: hidden;
+  backface-visibility: hidden;
+  border-radius: 5px;
   object-fit: contain;
+
 }
-.back img {
-  object-fit: cover;
+.pokeName {
+  width: 100%;
+  height: 10%;
+  align-self: flex-end;
+  font-size: calc(4px + 1vw);
+  margin-bottom: 5%;
 }
 
-
+.back {
+  backface-visibility: hidden;
+}
 
 
 
