--- a/src/index.css
+++ b/src/index.css
@@ -142,6 +142,39 @@ body{
   backface-visibility: hidden;
 }
 
+/* ---------- MEDIA QUERIES ---------------*/
+@media only screen and (min-device-width: 320px) and (max-width: 480px)  {
+  #header{
+    width: 100%;
+    height: 100px;
+  }
+  #header h1 {
+    font-size: calc(25px + 1vw);
+  }
+  #startButton {
+    font-size: calc(28px + 1vw);
+    margin-top: 50%;
+    width: 40%;
+  }
+  .cardsCont {
+    grid-template-columns: repeat(3, 24%);
+    grid-template-rows: repeat(4, 19%);
+  }
+
+  .gameMark {
+    display: flex;
+    font-size: calc(8px + 1vw);
+    text-align: center;
+  }
+}
+
+@media only screen and (min-device-width: 768px) and (max-width: 1280px) { 
+  .cardsCont {
+    grid-template-columns: repeat(4, 12%);
+    grid-template-rows: repeat(3, 43%);
+  }
+}
+
 
 
 
