--- a/src/index.css
+++ b/src/index.css
@@ -168,10 +168,20 @@ body{
   }
 }
 
-@media only screen and (min-device-width: 768px) and (max-width: 1280px) { 
+@media only screen and (min-device-width: 768px) and (max-width: 1024px) { 
   .cardsCont {
-    grid-template-columns: repeat(4, 12%);
-    grid-template-rows: repeat(3, 43%);
+    grid-template-columns: repeat(3, 25%);
+    grid-template-rows: repeat(4, 20%);
+  }
+  #startButton {
+    font-size: calc(40px + 1vw);
+    margin-top: 45%;
+    width: 40%;
+  }
+  .gameMark {
+    display: flex;
+    font-size: calc(13px + 1vw);
+    text-align: center;
   }
 }
 
